Fix dark mode hook, long debug text alert, language icon css filters
Minor changes:

- Add icon to clear local saves
- Toggeling debugging or side menu position does not close the overlay any more

--- a/spiel-zettel/src/app/components/MainMenu.module.css
+++ b/spiel-zettel/src/app/components/MainMenu.module.css
@@ -82,6 +82,10 @@
   }
 }
 
+.buttonContainerHeader img.ignoreIconColor {
+  filter: none;
+}
+
 /* Container for a text element inside the button */
 .buttonContainerTitle {
   flex: 1;
